# pyata

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  ideas.md  poetry.toml  pyproject.toml  setup.cfg
src/python3.12/pyata/: __init__.py  config.py
src/python3.12/pyata/core/: BinPU.py  Constraints.py  Facets.py  Goals.py  Hooks.py  Metrics.py  Relations.py  Solvers.py  Streams.py  Types.py  Unification.py  Universes.py  Vars.py  __init__.py
src/python3.12/pyata/examples/: crossword_specific.py  crosswords.py  crosswords_by_letter.py  permutations.py  permuts_metrics.py
src/python3.12/pyata/immutables/: Cel.py  Set.py  __init__.py
tests/python3.12/: smoke.py  text.txt
