
[project]

name = "pyata"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "immutables",
    "pydantic_settings",
    "sympy",
    "rich",
    "more_itertools",
    "numpy",
    "scipy",
]

authors = [
    { name = "Yevgeniy Grigoryev" },
]
maintainers = [
    { name = "Yevgeniy Grigoryev" },
]

readme = {file = "README.md", content-type = "text/markdown"}

description = "5th Generation Python"

keywords = [
    'logic', 'relational', 'miniKanren', 'constraint', 'solver', 'declarative',
     '5gl', 'prolog',
]

license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "pytest-timeout",
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Repository = "https://github.com/sizur/pyata"

[tool.flake8]
ignore = "E265"

[tool.pyright]

extraPaths = ["src/python3.12"]
include = ["src/python3.12", "tests/python3.12"]


pythonPlatform = "All"

ignore = ["src/oldstuff"]

# defineConstant = { DEBUG = true }

pythonVersion = "3.12"

executionEnvironments = [
    { root =   "src/python3.12" },
    { root = "tests/python3.12", include = ["src/python3.12"] },
]

typeCheckingMode = "strict"
strictDictionaryInference = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = " --strict-config -ra -q --timeout=1"
python_files = "*.py"
testpaths = [
    "tests/python3.12",
]
markers = [
    "smoke: mark a test as a smoke test",
]

[build-system]
requires = ["setuptools>=61.0", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/python3.12"]
include = ["pyata*"]
namespaces = true
